# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.circleci/: config.yml
configuration/: base.yaml  production.yaml
migrations/: 20220701061418_create_subscriptions_table.sql  20220808225705_make_status_not_null_in_subscriptions.sql  20220808230426_create_subscription_tokens_table.sql  20220830215742_seed_user.sql  20220901072016_create_idempotency_table.sql
scripts/: init_db.nu  init_redis.nu
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  login_middleware.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs  utils.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs  utils.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
