[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Example, use the version numbers you need
tide = "0.17.0-beta.1"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.11"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "runtime-async-std-native-tls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate"
]
[dev-dependencies]
surf = "2.3.2"
