[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Example, use the version numbers you need
# tide = "0.17.0-beta.1"
tide = "0.16"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.19"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt", "std"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tide-tracing = "0.0.11"
serde-aux = "3"
unicode-segmentation = "1"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-async-std-native-tls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
[dev-dependencies]
surf = "2.3.2"
once_cell = "1"
claim = "0.5"
